--- a/css/fa.css
+++ b/css/fa.css
@@ -4,9 +4,8 @@
 
     width: 50px;
     height: 50px;
-    margin: 5px 2px;
+    margin: 4px;
     padding-top: 9px;
-    padding-left: 1px;
 
     text-align: center;
     text-decoration: none;
