--- a/css/hamburgermenu.css
+++ b/css/hamburgermenu.css
@@ -1,5 +1,5 @@
 #hamburger-icon {
-    position: absolute;
+    position: fixed;
     z-index: 10;
 
     width: 70px;
@@ -31,7 +31,7 @@
 }
 
 #hamburger-icon span {
-    position: absolute;
+    position: fixed;
     left: 0;
 
     display: block;
