--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     Phone:     {{ config['site-phone'] }}
     Copyright: {{ config['site-license'] }}
     Source:    {{ config['site-source'] }}
+    Version:   v0.3 Alpha
     -->
     <!--Default meta tag-->
     <meta charset="UTF-8" />
@@ -63,18 +64,19 @@
     <link rel="alternate" type="application/rss+xml" title="{{ config['site-name'] }} - {{ post['page-title'] }}: Feed RSS" href="{{ config['site-url'] }}/feed.rss" />
     <link rel="alternate" type="application/atom+xml" title="{{ config['site-name'] }} - {{ post['page-title'] }}: Atom" href="{{ config['site-url'] }}/feed.atom" />
     <!-- DNS CACHE -->
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com"/>
-    <link rel="dns-prefetch" href="https://www.googletagmanager.com"/>
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
     <!-- CSS -->
     <style>
         {% include "../css/vendor/bootstrap/bootstrap.min.css" ignore missing %}
+        {% include "../css/vendor/fontawesome/fontawesome.min.css" ignore missing %}
         {% include "../css/default.css" ignore missing %}
         {% include "../css/fa.css" ignore missing %}
         {% include "../css/hamburgermenu.css" ignore missing %}
         {% include "../css/sidebar.css" ignore missing %}
-        {% include "../css/vendor/fontawesome/fontawesome.min.css" ignore missing %}
     </style>
-    <link async rel="prefetch" href="https://fonts.google.com/?query=roboto&selection.family=Roboto:300,700" />
+    <link rel="prefetch" href="https://fonts.google.com/?query=roboto&selection.family=Roboto:300,700" />
     <!--Internet Explorer-->
     <!--[if IE]><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><![endif]-->
 </head>
@@ -93,17 +95,16 @@
             <li><a href="//stickers.ptkdev.it">Stickers Telegram</a></li>
             <li><a href="//istickers.ptkdev.it">Stickers iMessage</a></li>
         </ul>
-        <div class="version">v0.2 Alpha</div>
+        <div class="version">v0.3 Alpha</div>
     </nav>
     <div id="main">
         <div id="content">
             <header>
                 <picture class="patryk_rzucidlo_ptkdev">
                     <source srcset="/img/ptkdev_patryk_rzucidlo_avatar_1024.webp" type="image/webp">
-                    <source srcset="/img/ptkdev_patryk_rzucidlo_avatar_1024.png" type="image/png">
-                    <img src="/img/ptkdev_patryk_rzucidlo_avatar_1024.jpg" alt="Patryk Rzucidło (PTKDev)">
+                    <source srcset="/img/ptkdev_patryk_rzucidlo_avatar_150.png" type="image/png">
+                    <img width="150" height="150" src="/img/ptkdev_patryk_rzucidlo_avatar_150.jpg" alt="Patryk Rzucidło (PTKDev)">
                 </picture>
-                
             </header>
             <article>
                 <h1>Patryk Rzucidło</h1>
@@ -119,18 +120,25 @@
                     <li><a href="//plus.google.com/+PatrykRzucidlo" target="_blank" class="fa fa-google"></a></li>
                     <li><a href="//www.linkedin.com/in/ptkdev" target="_blank" class="fa fa-linkedin"></a></li>
                     <li><a href="//github.com/ptkdev?tab=repositories" target="_blank" class="fa fa-github"></a></li>
-                    <li><a href="tg://addstickers?set=ptkdev" class="fa fa-ptkdev-stickers"><img src="/img/patryk_rzucidlo_ptkdev_stickers.png" alt="Stickers Telegram" /></a></li>
+                    <li>
+                        <a href="tg://addstickers?set=ptkdev" class="fa fa-ptkdev-stickers">
+                            <picture class="patryk_rzucidlo_ptkdev">
+                                <source srcset="/img/patryk_rzucidlo_ptkdev_stickers_512.webp" type="image/webp">
+                                <source srcset="/img/patryk_rzucidlo_ptkdev_stickers_30.png" type="image/png">
+                                <img width="30" height="30" src="/img/patryk_rzucidlo_ptkdev_stickers_30.jpg" alt="Stickers Telegram" />
+                            </picture>
+                        </a>
+                    </li>
                     <li><a href="tg://resolve?domain=ptkdev" class="fa fa-telegram"></a></li>
                     <li><a href="mailto:info@ptkdev.it" target="_blank" class="fa fa-envelope"></a></li>
                 </ul>
             </nav>
         </div>
         <footer>
-                © 2017. Open your source, open your mind.
-            </footer>
+            © 2017. Open your source, open your mind.
+        </footer>
     </div>
     <div id="particles-js" class="particles-js"></div>
-    
     <script>
         {% include "../js/vendor/jquery/jquery-3.2.1.min.js" ignore missing %}
         {% include "../js/vendor/particles/particles.min.js" ignore missing %}
@@ -138,20 +146,22 @@
         {% include "../js/default.js" ignore missing %}
         {% include "../js/sidebar.js" ignore missing %}
         {% include "../js/cookielaw.js" ignore missing %}
-    </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106540532-1"></script>
-    <script>
+
         if(document.cookie.indexOf('cookielaw=1') === -1){
             cookieChoices.showCookieConsentBar('Questo sito utilizza i cookie, se continui la navigazione consideriamo che accetti il loro uso','OK', 'Informazioni', '/cookie');
         }
 
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments)};
-        gtag('js', new Date());
-        gtag('config', '{{ config['google-analytics-id'] }}');
-
         console.log("Source code of my portfolio is open source :) see my account github: https://github.com/ptkdev");
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ config['google-analytics-id'] }}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', '{{ config['google-analytics-id'] }}');
+    </script>
+
     <div id="cache" class="cache"></div>
 </body>
 
